Add: PageTurner service - openPrevPage(), openNextPage()

--- a/examples/index.html
+++ b/examples/index.html
@@ -30,6 +30,8 @@
 		<p>
 			<button ng-click="example.addExamplePage()">Add page</button>
 			<button ng-click="example.openRandomPage()">Open random</button>
+			<button ng-click="example.openPrevPage()">Previous page</button>
+			<button ng-click="example.openNextPage()">Next page</button>
 		</p>
 
 		<div class="page-turner">
