Add: Options - ptOnPageChanged, ptPageChangeDelaySec, ptIsEnabledChangeOnClick

--- a/examples/index.html
+++ b/examples/index.html
@@ -34,7 +34,7 @@
 			<button ng-click="example.openNextPage()">Next page</button>
 		</p>
 
-		<div class="page-turner">
+		<div class="page-turner" pt-on-page-changed="example.onPageChanged(pageId)">
 
 			<div class="page">
 				<h1>Cover page</h1>
