Add: Example - Based: 6939fc09d3d7db8bc8c4d62cd63d09efca74534f

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="utf-8" />
 		<title>angular-page-turner</title>
 
-		<script src="../bower_components/angular/angular.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 
 		<!-- angular-page-turner -->
-		<link rel="stylesheet" href="../styles/angular-page-turner.css" />
-		<script src="../scripts/angular-page-turner.js"></script>
+		<link rel="stylesheet" href="styles/angular-page-turner.css" />
+		<script src="scripts/angular-page-turner.js"></script>
 		<!---->
 
 		<!-- Example -->
@@ -21,6 +21,9 @@
 	<body ng-app="ExampleApp" ng-controller="ExampleController as example">
 
 		<h1>angular-page-turner</h1>
+		<p>
+			<a href="https://github.com/mugifly/angular-page-turner"target="_blank">https://github.com/mugifly/angular-page-turner</a>
+		</p>
 
 		<p>
 			Page:
